--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -105,6 +105,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DemosController.cs" />
     <Compile Include="Controllers\DocsController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -153,6 +154,7 @@
     <Content Include="Views\Demos\hiddenColumns.cshtml" />
     <Content Include="Views\Docs\lightGrid\lightGrid.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgColumn.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
