--- a/Web/Web.config
+++ b/Web/Web.config
@@ -43,4 +43,9 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+	<system.webServer>
+		<staticContent>
+			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.0:00:00" />
+		</staticContent>
+	</system.webServer>
 </configuration>
