--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -111,6 +111,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DocumentationFileProvider.cs" />
+    <Compile Include="Services\DocumentationFileSources.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -122,6 +124,7 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Data\zips.json" />
+    <None Include=".editorconfig" />
     <None Include="Properties\PublishProfiles\light-grid.digitalcreations.pl - Web Deploy.pubxml" />
     <Content Include="Scripts\demoApp.js" />
     <Content Include="Scripts\docs.js" />
@@ -134,6 +137,10 @@
     <Content Include="Views\Demos\localEditableRow.cshtml" />
     <Content Include="Views\Demos\simplest.cshtml" />
     <Content Include="Views\Demos\sortableColumns.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgColumnTemplates.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgHeaderCell.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgView.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgCell.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -155,6 +162,18 @@
     <Content Include="Views\Docs\lightGrid\lightGrid.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgColumn.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgHeaderRow.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgRow.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgHeaderView.cshtml" />
+    <Content Include="Views\Docs\controls\lgPager.cshtml" />
+    <Content Include="Views\Docs\controls\persistData.cshtml" />
+    <Content Include="Views\Docs\controls\lgToggleExpandedRow.cshtml" />
+    <Content Include="Views\Docs\controls\switchView.cshtml" />
+    <Content Include="Views\Docs\controls\lgSorter.cshtml" />
+    <Content Include="Views\Docs\templates\lgBoundColumn.cshtml" />
+    <Content Include="Views\Docs\templates\lgEditableColumn.cshtml" />
+    <Content Include="Views\Docs\templates\lgSortableColumn.cshtml" />
+    <Content Include="Views\Docs\dataProviders\lgLocalDataProviderFactory.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
