--- a/Web/Web.config
+++ b/Web/Web.config
@@ -9,7 +9,7 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.5" />
 		<httpRuntime targetFramework="4.5" />
-		<customErrors mode="On" />
+		<customErrors mode="RemoteOnly" />
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
