--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -140,7 +140,8 @@
     <Content Include="Views\Demos\localEditableRow.cshtml" />
     <Content Include="Views\Demos\simplest.cshtml" />
     <Content Include="Views\Demos\sortableColumns.cshtml" />
-    <None Include="Views\Docs\dataProviders\overview.cshtml" />
+    <Content Include="Views\Docs\dataProviders\LocalDataProvider.cshtml" />
+    <Content Include="Views\Docs\dataProviders\overview.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgColumnTemplates.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgHeaderCell.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgView.cshtml" />
@@ -180,6 +181,7 @@
     <Content Include="Views\Docs\dataProviders\lgLocalDataProviderFactory.cshtml" />
     <Content Include="Views\Demos\serverSideProcessing.cshtml" />
     <Content Include="Views\Docs\dataProviders\lgServerDataProviderFactory.cshtml" />
+    <Content Include="Views\Docs\dataProviders\ServerDataProvider.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
