--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -162,16 +162,14 @@
     <Content Include="Views\Demos\clientSidePaging.cshtml" />
     <Content Include="Views\Demos\fullyFeaturedLocal.cshtml" />
     <Content Include="Views\Demos\hiddenColumns.cshtml" />
-    <Content Include="Views\Docs\lightGrid\lightGrid.cshtml" />
+    <Content Include="Views\Docs\lightGrid\lgGrid.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgColumn.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
-    <Content Include="Views\Docs\lightGrid\lgHeaderRow.cshtml" />
-    <Content Include="Views\Docs\lightGrid\lgRow.cshtml" />
     <Content Include="Views\Docs\lightGrid\lgHeaderView.cshtml" />
     <Content Include="Views\Docs\controls\lgPager.cshtml" />
-    <Content Include="Views\Docs\controls\persistData.cshtml" />
+    <Content Include="Views\Docs\controls\lgPersistData.cshtml" />
     <Content Include="Views\Docs\controls\lgToggleExpandedRow.cshtml" />
-    <Content Include="Views\Docs\controls\switchView.cshtml" />
+    <Content Include="Views\Docs\controls\lgSwitchView.cshtml" />
     <Content Include="Views\Docs\controls\lgSorter.cshtml" />
     <Content Include="Views\Docs\templates\lgBoundColumn.cshtml" />
     <Content Include="Views\Docs\templates\lgEditableColumn.cshtml" />
