--- a/Web/Web.Release.config
+++ b/Web/Web.Release.config
@@ -4,4 +4,9 @@
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
 	</system.web>
+	<system.webServer>
+		<staticContent>
+			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.0:00:00" xdt:Transform="Insert" />
+		</staticContent>
+	</system.webServer>
 </configuration>
