--- a/Web/Web.Release.config
+++ b/Web/Web.Release.config
@@ -5,8 +5,8 @@
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
 	</system.web>
 	<system.webServer>
-		<staticContent>
-			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.0:00:00" xdt:Transform="Insert" />
+		<staticContent xdt:Transform="Insert">
+			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.0:00:00" />
 		</staticContent>
 	</system.webServer>
 </configuration>
