--- a/Web/Web.config
+++ b/Web/Web.config
@@ -11,6 +11,7 @@
 		<httpRuntime targetFramework="4.5" />
 		<customErrors mode="RemoteOnly" />
 	</system.web>
+	<system.webServer />
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
