Domain name changed

--- a/Web/Web.Release.config
+++ b/Web/Web.Release.config
@@ -8,5 +8,16 @@
 		<staticContent xdt:Transform="Insert">
 			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.0:00:00" />
 		</staticContent>
+		<rewrite xdt:Transform="Insert">
+			<rules>
+				<rule name="CanonicalHostNameRule">
+					<match url="(.*)" />
+					<conditions>
+						<add input="{HTTP_HOST}" pattern="^light-grid\.net$" negate="true" />
+					</conditions>
+					<action type="Redirect" url="http://light-grid.net/{R:1}" />
+				</rule>
+			</rules>
+		</rewrite>
 	</system.webServer>
 </configuration>
